--- a/Client/MauiBlazorApp/wwwroot/index.html
+++ b/Client/MauiBlazorApp/wwwroot/index.html
@@ -22,5 +22,7 @@
     </div>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
+
+    <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetAlert2.min.js"></script>
 </body>
 </html>
