--- a/Client/MauiBlazorApp/wwwroot/index.html
+++ b/Client/MauiBlazorApp/wwwroot/index.html
@@ -24,5 +24,8 @@
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 
     <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetAlert2.min.js"></script>
+
+    <script src="exportPdf.js"></script>
+
 </body>
 </html>
